--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/typeorm": "^6.1.2",
+    "@vitalets/google-translate-api": "^2.8.0",
+    "await-to-js": "^2.1.1",
     "nestjs-config": "^1.4.2",
     "postgresql": "0.0.1",
     "reflect-metadata": "^0.1.12",
